--- a/Makefile.objs
+++ b/Makefile.objs
@@ -87,8 +87,12 @@ common-obj-$(CONFIG_FDT) += device_tree.o
 
 common-obj-y += qapi/
 
-softmmu-main-y = main.o
 endif
+
+ifneq ($(CONFIG_FUZZ),y)
+softmmu-obj-y = main.o
+endif
+
 
 #######################################################################
 # Target-independent parts used in system and user emulation
